fix z-index bug

--- a/client/pages/create_poll/stylesheet.styl
+++ b/client/pages/create_poll/stylesheet.styl
@@ -24,8 +24,6 @@
   .optionsContainer
     padding-top: 20px
     padding-bottom: 25px
-    div
-      z-index: -1
 
   .input, .input>select, .input>input
     z-index: 0
@@ -40,6 +38,8 @@
     border-radius: 3px
     box-shadow: none
     -webkit-appearance: none
+    >div>div
+      z-index: 1
 
   .addon
     padding: 0px
